# ytbascii

./: Cargo.toml  README.md  config.json
.obsidian/: community-plugins.json  workspace.json
api/: Cargo.toml
api/src/: client.rs  fetcher.rs  lib.rs  models.rs  parser.rs
core/: Cargo.toml
core/src/: main.rs  utils.rs
docs/: Fetcher.md
fetcher/: Cargo.toml
fetcher/src/: lib.rs
logger/: Cargo.toml
logger/src/: colors.rs  lib.rs
youtube/: Cargo.toml
youtube/src/: http.rs  lib.rs  models.rs  utils.rs
youtube/src/models/: error.rs  mod.rs  stream.rs  thumbnail.rs  video.rs
ytbascii/: Cargo.toml
ytbascii/src/: config.rs  defaults.rs  main.rs  utils.rs
