[package]
name = "youtube"
version = "0.1.0"
authors = ["Hokanosekai"]
edition = "2021"

[dependencies]
logger = { path = "../logger" }
google-youtube3 = "*"
serde = "^1.0"
serde_json = "^1.0"
futures = "0.3"
reqwest = { version = "^0.11", features = ["json"] }
curl = { version = "^0.4", features = ["http2"] }