[package]
name = "ytbascii"
version = "0.1.0"
authors = ["Hokanosekai"]
edition = "2021"

[dependencies]
logger = { path = "../logger" }
api = { path = "../api" }
lazy_static = "1.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
futures = "0.3.28"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "^0.11", features = ["json"] }
rand = "0.8.4"
tokio = { version = "1.12.0", features = ["full"] }

